--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "connectkit": "^1.5.3",
     "next": "^13.5.6",
     "react": "^18.2.0",
