--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "axios": "^1.5.1",
     "connectkit": "^1.5.3",
+    "ethers": "^5.5.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "viem": "^1.17.1",
     "wagmi": "^1.4.5",
-    "web3.storage": "^4.5.5",
-    "ethers": "^5.5.0"
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
